apps/demo/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: nginx
        name: demo
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
