apps/demo/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  ports:
  - port: 80
  selector:
    app: demo
